# lmdb-js

./: .gitattributes  .gitignore  .gitlab-ci.yml  .npmignore  .travis.yml  ANNOUNCEMENT  CHANGES  CODING.RULES  COPYRIGHT  INSTALL  LICENSE  Make-common  Make-common.dist  Make-common.gmake  Make-common.um  Makefile  Makefile.in  README  README.md  SECURITY.md  TODO  \  acconfig.h  acinclude.m4  aclocal.m4  binding.gyp  bun.js  cache.js  caching.js  caching.mjs  configure  configure.ac  configure.in  deno.js  deps.ts  example-advanced1-indexing.js  example1-env.js  example2-datatypes.js  example3-multiple-transactions.js  example4-cursors.js  (+27 more)
.github/workflows/: prebuild.yml  test-arm64.yml  test-arm7.yml  test-install.yml  test-integration.yml  test.yml
benchmark/: index.js  read-async.js
clients/: Make-template  Makefile.in
clients/fax500/: Make-template  Makefile.in  README  Version.c  Versionrp.c  fax500.h  faxtotpc.c  main.c  rp500.c  xrpcomp
clients/finger/: Make-template  Makefile.in  Version.c  main.c
clients/gopher/: Make-template  Makefile.in  README  Version.c  Versiongw.c  detach.c  go500.c  go500gw.c  go500gw.help  setproctitle.c
clients/mail500/: Make-template  Makefile.in  README  Version.c  mail500.m4  main.c  sendmail.cf
clients/maildap/: Makefile.in  README  maildap.m4  main.c
clients/rcpt500/: Make-template  Makefile.in  README  Version.c  cmds.c  help.c  main.c  query.c  rcpt500.h  rcpt500.help
clients/tools/: Make-template  Makefile.in  Versionldd.c  Versionldm.c  Versionldr.c  Versionlds.c  common.c  common.h  ldapcompare.c  ldapcompare.dsp  ldapdelete.c  ldapdelete.dsp  ldapdelete.dsw  ldapexop.c  ldapmodify.c  ldapmodify.dsp  ldapmodify.dsw  ldapmodrdn.c  ldapmodrdn.dsp  ldapmodrdn.dsw  ldappasswd.c  ldappasswd.dsp  ldappasswd.dsw  ldapsearch.c  ldapsearch.dsp  ldapsearch.dsw  ldapurl.c  ldapvc.c  ldapwhoami.c  ldapwhoami.dsp
clients/ud/: Make-template  Makefile.in  README  Version.c  auth.c  edit.c  etc.ud.conf  find.c  globals.c  group.c  help.c  main.c  mod.c  print.c  string_to_key.c  ud.dsp  ud.dsw  ud.h  util.c
contrib/: ConfigOIDs  Makefile.in  README
contrib/gtk-tool/: COPYRIGHT  ChangeLog  Gtk_LdapItem.cc  Gtk_LdapItem.h  Gtk_LdapServer.cc  Gtk_LdapServer.h  Gtk_LdapTree.cc  Gtk_LdapTree.h  Gtk_LdapTreeItem.cc  Gtk_LdapTreeItem.h  INSTALL  LdapEntry.cc  LdapEntry.h  Makefile  My_Scroller.cc  My_Scroller.h  My_Window.cc  My_Window.h  README  TODO  branch_node.xpm  common.h  cpluscommon.h  db_node.xpm  gtk.h  ldap_manager.cc  leaf_node.xpm  main.cc  root_node.xpm  system.h  utils.cc  utils.h
contrib/ldapc++/: COPYRIGHT  Makefile.am  Makefile.in  README  TODO  acconfig.h  aclocal.m4  config.guess  config.sub  configure  configure.in  doxygen.rc  ltconfig  ltmain.sh  mkinstalldirs  version.sh  version.var
contrib/ldapc++/examples/: Makefile.am  Makefile.in  main.cpp  readSchema.cpp  startTls.cpp  urlTest.cpp
contrib/ldapc++/src/: LDAPAddRequest.cpp  LDAPAddRequest.h  LDAPAsynConnection.cpp  LDAPAsynConnection.h  LDAPAttrType.cpp  LDAPAttrType.h  LDAPAttribute.cpp  LDAPAttribute.h  LDAPAttributeList.cpp  LDAPAttributeList.h  LDAPBindRequest.cpp  LDAPBindRequest.h  LDAPCompareRequest.cpp  LDAPCompareRequest.h  LDAPConnection.cpp  LDAPConnection.h  LDAPConstraints.cpp  LDAPConstraints.h  LDAPControl.cpp  LDAPControl.h  LDAPControlSet.cpp  LDAPControlSet.h  LDAPDeleteRequest.cpp  LDAPDeleteRequest.h  LDAPEntry.cpp  LDAPEntry.h  LDAPEntryList.cpp  LDAPEntryList.h  LDAPException.cpp  LDAPException.h  LDAPExtRequest.cpp  LDAPExtRequest.h  LDAPExtResult.cpp  LDAPExtResult.h  LDAPMessage.cpp  LDAPMessage.h  LDAPMessageQueue.cpp  LDAPMessageQueue.h  LDAPModDNRequest.cpp  LDAPModDNRequest.h  (+55 more)
contrib/ldapc++/src/ac/: time.h
contrib/ldapsasl/: README  ldapdb.c
contrib/ldaptcl/: CHANGES  COPYRIGHT  Makefile.in  README  configure  configure.in  ldap.n  ldaperr.tcl  neoXldap.c  pkgIndex.tcl.in  tkAppInit.c
contrib/php3-tool/: LICENSE  Makefile  README  at.conf  at.conf2  index.php3  ldap-photo.php3  php3tool.conf  style.css
contrib/saucer/: Make-template  Makefile.in  README  main.c  sample.saucerrc  saucer.1
contrib/slapd-modules/: README
contrib/slapd-tools/: README  statslog  wrap_slap_ops
contrib/tweb/: CHANGES  COPYRIGHTS  FEATURE-LIST  GETTING-STARTED.openldap  dn.c  (+39 more)
doc/: Make-template  Makefile.in
examples/: 1-env.js  10-binkeycursors.js  11-createdbi-usertxn.js  12-largedb-resize.js  2-datatypes.js  3-multiple-transactions.js  4-cursors.js  5-dupsort.js  6-asyncio.js  7-largedb.js  8-multiple-cursors-single-transaction.js  9-unnamed-db.js  advanced1-indexing.js
include/: Make-template  Makefile.in  avl.h  bridge.h  compat_regex.h  disptmpl.h  getopt-compat.h  kbtree.h  lber.h  lber_pvt.h  lber_types.h.in  lber_types.hin  lber_types.nt  ldap.h  ldap_cdefs.h  ldap_config.h.in  ldap_config.h.nt  ldap_config.hin  ldap_config.nt  ldap_defaults.h  ldap_features.h.in  ldap_features.h.nt  ldap_features.hin  ldap_features.nt  ldap_int_thread.h  ldap_log.h  ldap_pvt.h  ldap_pvt_thread.h  ldap_pvt_uc.h  ldap_queue.h  ldap_rq.h  ldap_schema.h  ldap_utf8.h  ldapconfig.h.edit  ldapconfig.h.in  ldapconfig.h.nt  ldapconfig.h.um  ldbm.h  ldif.h  lthread.h  (+27 more)
libraries/: Make-template  Makefile.in
servers/: Make-template  Makefile.in
src/: WriteWorker.cpp  binding.gyp  compression.cpp  cursor.cpp  dbi.cpp  env.cpp  lmdb-js.cpp  lmdb-js.h  lmdb-store.cpp  lmdb-store.h  misc.cpp  node-lmdb.cpp  node-lmdb.h  ordered-binary.cpp  txn.cpp  v8-fast-api-calls-v1.h  v8-fast-api-calls.h  v8-functions.cpp  windows.c  writer.cpp
test/: bun.js  check-commit.js  cluster.js  deno-cleanup-hook-exit.ts  deno.js  deno.sh  deno.ts  index.js  index.test.js  lock-test.js  node-lmdb.old.js  node-lmdb.test.js  performance.js  readonly-threads.cjs  threads.cjs  threads.js
test-db/: data.mdb  lock.mdb
tests/: Make-template  Makefile.in  README  performance.js  run.in  slapd-addel.c  slapd-read.c  slapd-search.c  slapd-tester.c  unit.js
util/: ArrayLikeIterable.js  RangeIterable.js  RangeIterator.js  set-optional-deps.cjs  upgrade-lmdb.js  when.js
(+2349 files in other folders)
